--- a/Pitzer-College/style.css
+++ b/Pitzer-College/style.css
@@ -406,7 +406,7 @@ p.white {
 
 /* Sidebar Widget Site Banner */
 
-.banner {background-image: url('images/banner-cherry-blossoms-mounds.jpg');}
+/* .banner {background-image: url('images/banner-cherry-blossoms-mounds.jpg');} */
 .banner a.logo {background-image: url('images/pitzer_logo_sans_colleges_white-transparent.png');
 	width: 279px;
   height:91px;
