--- a/Pitzer-College/style.css
+++ b/Pitzer-College/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name:         Pitzer College
-Version: 1.2.7
+Version: 1.2.8
 Author: Joseph Dickson
 */
 
@@ -229,16 +229,21 @@ header {margin:1em 0;}
 
 
 h1.entry-title {
-	padding-left:15px;
+	padding-left: 15px;
+	font-weight: bold;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	color: #58595b;
 	font-size: 1.3em;
-	}
+}
 
-p {
-	margin: 0.6em 0;
+h1, h2, h3 {
+	font-size: 1.3em;
+}
+
+h4, h5, h6 {
+	font-size: 1.1em;
 }
 
 a {color:#f7941d;}
@@ -711,8 +716,7 @@ p#breadcrumbs {
 /* Page and Post Headline size and weights */
 
 article header h1.entry-title {
-	font-weight:normal;
-	font-size: 1.7em;
+	font-size: 1.3em;
 	margin: 0;
 	padding: 0;}
 
