--- a/Pitzer-College/main.css
+++ b/Pitzer-College/main.css
@@ -274,11 +274,18 @@ h1.entry-title {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #58595b;
+}
+
+h1 {
+	font-size: 1.4em;
+}
+
+h2 {
 	font-size: 1.3em;
 }
 
-h1, h2, h3 {
-	font-size: 1.3em;
+h3 {
+	font-size: 1.2em;
 }
 
 h4, h5, h6 {
