--- a/Pitzer-College/style.css
+++ b/Pitzer-College/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name:         Pitzer College
-Version: 1.2.13
+Version: 1.3
 Author: Joseph Dickson
 */
 
@@ -235,11 +235,18 @@ h1.entry-title {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #58595b;
+}
+
+h1 {
+	font-size: 1.4em;
+}
+
+h2 {
 	font-size: 1.3em;
 }
 
-h1, h2, h3 {
-	font-size: 1.3em;
+h3 {
+	font-size: 1.2em;
 }
 
 h4, h5, h6 {
