Modal max height
creates an overflow allowing for scrollbars

--- a/Pitzer-College/style.css
+++ b/Pitzer-College/style.css
@@ -804,6 +804,11 @@ time.updated,
 .widget_text .row .small-12 img {float:right;}
 
 /* Videos, Reveal Modal, YouTube, Vimeo lightbox */
+#myModal {
+	max-height: 90%;
+	overflow: auto;
+}
+
 .reveal-modal {
     padding: 1.875em;
 	position:fixed;
