Added ID tags for sidebars to prevent errors
http://codex.wordpress.org/Function_Reference/register_sidebar

Registration now requires ID

--- a/Pitzer-College/main.css
+++ b/Pitzer-College/main.css
@@ -1365,3 +1365,6 @@ div.small-12.large-9.columns table td {
   .show-for-print {
     display: inherit !important; }
 	}
+
+/* tabs */
+.section-container section .title, .section-container .section .title, .section-container.auto section .title, .section-container.auto .section .title {background-color: #B9B9B9;}
